--- a/UnityLauncherPro/MainWindow.xaml
+++ b/UnityLauncherPro/MainWindow.xaml
@@ -9,27 +9,6 @@
         Title="UnityLauncherPro" Height="650" Width="880" WindowStartupLocation="CenterScreen" Background="{DynamicResource ThemeDarkestBackground}" MinWidth="600" MinHeight="650" AllowsTransparency="True" WindowStyle="None" Margin="0" KeyDown="OnWindowKeyDown" Closing="Window_Closing" SizeChanged="Window_SizeChanged" Icon="Images/icon.ico" Activated="Window_Activated">
     <Window.Resources>
 
-        <!--TODO cleanup unused styles for dropdown menu-->
-        <Color x:Key="ControlLightColor">Red</Color>
-        <Color x:Key="ControlMediumColor">#FF7381F9</Color>
-        <Color x:Key="ControlDarkColor">#FF211AA9</Color>
-        <Color x:Key="ControlMouseOverColor">#FFFF0000</Color>
-        <Color x:Key="ControlPressedColor">#FF211AA9</Color>
-        <!--Border colors-->
-        <Color x:Key="BorderLightColor">#FFFF0000</Color>
-        <Color x:Key="BorderMediumColor">#FF888888</Color>
-        <Color x:Key="BorderDarkColor">#FF444444</Color>
-        <Color x:Key="PressedBorderLightColor">#FF888888</Color>
-        <Color x:Key="PressedBorderDarkColor">#FF444444</Color>
-        <Color x:Key="DisabledBorderLightColor">#FFAAAAAA</Color>
-        <Color x:Key="DisabledBorderDarkColor">#FF888888</Color>
-        <Color x:Key="DefaultBorderBrushDarkColor">Black</Color>
-        <!--Control-specific resources.-->
-        <Color x:Key="HeaderTopColor">#FFC5CBF9</Color>
-        <Color x:Key="DatagridCurrentCellBorderColor">Black</Color>
-        <Color x:Key="SliderTrackDarkColor">#FFC5CBF9</Color>
-        <Color x:Key="NavButtonFrameColor">#FF3843C4</Color>
-
         <ControlTemplate x:Key="ComboBoxToggleButton" TargetType="{x:Type ToggleButton}">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -43,7 +22,7 @@
                 <Border Grid.Column="0" CornerRadius="0" Margin="0" >
                     <Border.Background>
                         <!--main combo background-->
-                        <SolidColorBrush Color="#FF1D1D1D"/>
+                        <SolidColorBrush Color="#FF3E3E44"/>
                     </Border.Background>
                 </Border>
                 <!--combobox arrow-->
@@ -80,7 +59,6 @@
             <Setter Property="VerticalContentAlignment" Value="Center" />
             <Setter Property="HorizontalAlignment" Value="Stretch" />
             <Setter Property="VerticalAlignment" Value="Center" />
-            <!--<Setter Property="OverridesDefaultStyle" Value="True"/>-->
             
             <Setter Property="Template">
                 <Setter.Value>
@@ -123,11 +101,11 @@
                                 <Grid x:Name="DropDown" SnapsToDevicePixels="True" MinWidth="{TemplateBinding ActualWidth}" MaxHeight="{TemplateBinding MaxDropDownHeight}">
                                     <Border x:Name="DropDownBorder" BorderThickness="1">
                                         <Border.BorderBrush>
-                                            <SolidColorBrush Color="{DynamicResource BorderMediumColor}" />
+                                            <SolidColorBrush Color="#FF171717" />
                                         </Border.BorderBrush>
                                         <Border.Background>
-                                            <!--combobox dropdown background here!-->
-                                            <SolidColorBrush Color="#FF303030" />
+                                            <!--combobox dropdown background here -->
+                                            <SolidColorBrush Color="#FF2E2E34" />
                                         </Border.Background>
                                     </Border>
                                     <ScrollViewer Margin="4,6,4,6" SnapsToDevicePixels="True">
